--- a/src/app/all/all.html
+++ b/src/app/all/all.html
@@ -1,8 +1,10 @@
 @for(items of ans; track items){
-<button tuiCardLarge tuiHeader tuiSurface="floating" type="button" (click)="goToTask(items.id)">
-    <h1 tuiTitle>
-        {{items.title}}
+<div class = "centered-row">
+<button tuiCardLarge tuiHeader tuiSurface="floating" type="button" (click)="goToTask(items.id)"  style="height : 100px">
+  <h1 tuiTitle style="font-size: 68px; margin: 0;">
+     {{items.title}}
     </h1>
 </button>
+</div>
 }
 <p>hello</p>
