--- a/src/app/all/all.html
+++ b/src/app/all/all.html
@@ -1,10 +1,11 @@
 @for(items of ans; track items){
-<div class = "centered-row">
-<button tuiCardLarge tuiHeader tuiSurface="floating" type="button" (click)="goToTask(items.id)"  style="height : 100px">
-  <h1 tuiTitle style="font-size: 68px; margin: 0;">
-     {{items.title}}
+<div class="centered-row">
+  <button tuiCardLarge tuiHeader tuiSurface="floating" type="button" (click)="goToTask(items.id)"
+    style="height : 100px">
+    <h1 tuiTitle style="font-size: 68px; margin: 0;">
+      {{items.title}}
     </h1>
-</button>
+  </button>
 </div>
 }
 <p>hello</p>
