--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,5 @@
-
-<tui-root data-tui-theme="dark">
+<!-- <tui-root data-tui-theme="dark"> -->
+<tui-root>
     <app-navbar></app-navbar>
-    <div style="display: flex;justify-content: center;">
-        <router-outlet/>
-    </div>
+    <router-outlet />
 </tui-root>
