--- a/src/app/task/task.html
+++ b/src/app/task/task.html
@@ -1,9 +1,12 @@
 <div class="card-container">
   @for (x of tasks; track x) {
-  <div class="task-card" >
+  <div class="task-card">
     <h2 class="task-title">{{ x.taskTitle }}</h2>
     <p class="task-desc">{{ x.taskDescription }}</p>
     <p class="task-date">{{ x.createdAtFormatted }}</p>
   </div>
   }
+  <div class="task-card">
+    <button class="task-title" (click)="addtask()">add task</button>
+  </div>
 </div>
