--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,9 @@
 <!-- <tui-root data-tui-theme="dark"> -->
 <tui-root>
     <app-navbar></app-navbar>
-    <router-outlet />
+    <div style="width: 100%;height: 100%;display: flex;justify-content: center; align-items: center;">
+        <div style="width: 50%;">
+            <router-outlet />
+        </div>
+    </div>
 </tui-root>
