--- a/src/app/add-objective/add-objective.html
+++ b/src/app/add-objective/add-objective.html
@@ -1,8 +1,66 @@
-<div class="objective-container">
-  <form action="" method="post">
-    <input type="text" placeholder="enter title" [formControl]="title">
-    <br>
-    <button type="button" (click)="onSubmit()">addObjective</button>
-    <h3>{{title.value}}</h3>
-  </form>
-</div>
+<p>add-objective works!</p>
+<form
+  tuiAppearance="floating"
+  tuiCardLarge
+  tuiForm="m"
+  [formGroup]="form"
+  [style.max-width.rem]="32"
+  (submit)="onSubmit()"
+>
+<tui-textfield>
+    <label tuiLabel>title</label>
+    <input placeholder="john.wick" id="title" name="title" formControlName="title" type="text" tuiTextfield />
+  </tui-textfield>
+<!-- <tui-textfield
+    multi
+    [style.width.rem]="15"
+    [tuiTextfieldCleaner]="false"
+>
+  <label tuiLabel>members</label>
+    <input
+        tuiInputChip
+        formControlName="members"
+    />
+    <button
+        appearance="icon"
+        iconStart="@tui.x"
+        size="m"
+        tuiIconButton
+        type="button"
+        (click)="form.get('members')?.setValue(this.members)"
+    >
+        Clear
+    </button>
+    <tui-input-chip *tuiItem />
+</tui-textfield>
+<tui-textfield
+    multi
+    [style.width.rem]="15"
+    [tuiTextfieldCleaner]="false"
+>
+<label tuiLabel>tasks</label>
+    <input
+        tuiInputChip
+        formControlName="tasks"
+    />
+    <button
+        appearance="icon"
+        iconStart="@tui.x"
+        size="m"
+        tuiIconButton
+        type="button"
+        (click)="form.get('tasks')?.setValue(this.tasks)"
+    >
+        Clear
+    </button>
+    <tui-input-chip *tuiItem />
+</tui-textfield> -->
+
+  <footer>
+    <button appearance="secondary" tuiButton type="button">Cancel</button>
+    <button tuiButton type="submit" >Add Objective</button>
+  </footer>
+</form>
+<pre>
+  {{form.value | json}}
+</pre>
