--- a/src/app/add-task/add-task.html
+++ b/src/app/add-task/add-task.html
@@ -1,43 +1,45 @@
-<form tuiAppearance="floating" tuiCardLarge tuiForm="m" [formGroup]="form" [style.max-width.rem]="32"
-  (ngSubmit)="onSubmit()">
-
-  <header tuiHeader>
-    <h2 tuiTitle>
-      Add Task
-      <span tuiSubtitle>Tell us about yourself</span>
-    </h2>
-  </header>
-
-  <tui-textfield>
-    <input placeholder="Task Title" tuiTextfield type="text" formControlName="taskTitle" required />
+<p>add-objective works!</p>
+<form
+  tuiAppearance="floating"
+  tuiCardLarge
+  tuiForm="m"
+  [formGroup]="form"
+  [style.max-width.rem]="32"
+>
+<tui-textfield>
+    <label tuiLabel>task title</label>
+    <input placeholder="for e.g. java" id="taskTitle" name="taskTitle" formControlName="taskTitle" type="text" tuiTextfield />
   </tui-textfield>
-  <tui-error [error]="[] | tuiFieldError | async" />
-
   <tui-textfield>
-    <input placeholder="Task Description" tuiTextfield type="text" formControlName="taskDescription" />
+    <label tuiLabel>task Description</label>
+    <input placeholder="for e.g. java description" id="taskDescription" name="taskDescription" formControlName="taskDescription" type="text" tuiTextfield />
   </tui-textfield>
-  <tui-error [error]="[] | tuiFieldError | async" />
-
-  <tui-textfield multi [style.width.rem]="15" [tuiTextfieldCleaner]="false">
-    <input tuiInputChip formControlName="links" />
-    <button appearance="icon" iconStart="@tui.x" size="m" tuiIconButton type="button"
-      (click)="form.get('links')?.setValue(this.links)">
-      Clear
+<tui-textfield
+    multi
+    [style.width.rem]="15"
+    [tuiTextfieldCleaner]="false"
+>
+  <label tuiLabel>Links</label>
+    <input
+        tuiInputChip
+        formControlName="links"
+    />
+    <button
+        appearance="icon"
+        iconStart="@tui.x"
+        size="m"
+        tuiIconButton
+        type="button"
+    >
+        Clear
     </button>
     <tui-input-chip *tuiItem />
-  </tui-textfield>
-  <tui-input-date tuiUnfinishedValidator="Finish filling the field" [max]="max" [min]="min" formControlName="deadline">
-    Choose a date
-  </tui-input-date>
-  <tui-error [error]="[] | tuiFieldError | async" />
-  <label tuiLabel>
-    <input formControlName="importantTask" tuiSwitch type="checkbox" />
-    Important Task
-    <tui-icon tuiTooltip="Only important task should be toggled" />
-  </label>
+</tui-textfield>
   <footer>
     <button appearance="secondary" tuiButton type="button">Cancel</button>
     <button tuiButton type="submit">Add Task</button>
   </footer>
 </form>
-<pre>{{form.value | json}}</pre>
+<pre>
+  {{form.value | json}}
+</pre>
