--- a/src/app/task/task.html
+++ b/src/app/task/task.html
@@ -6,7 +6,52 @@
     <p class="task-date">{{ x.createdAtFormatted }}</p>
   </div>
   }
-  <div class="task-card">
+  <!-- <div class="task-card">
     <button class="task-title" (click)="addtask()">add task</button>
   </div>
-</div>
+</div> -->
+<form
+  tuiAppearance="floating"
+  tuiCardLarge
+  tuiForm="m"
+  [formGroup]="form"
+  [style.max-width.rem]="32"
+  (submit)="onSubmit()"
+>
+<tui-textfield>
+    <label tuiLabel>title</label>
+    <input placeholder="task title" id="title" name="title" formControlName="title" type="text" tuiTextfield />
+  </tui-textfield>
+  <tui-textfield>
+    <label tuiLabel>description</label>
+    <input placeholder="Task description" id="description" name="description" formControlName="description" type="text" tuiTextfield />
+  </tui-textfield>
+<tui-textfield
+    multi
+    [style.width.rem]="15"
+    [tuiTextfieldCleaner]="false"
+>
+  <label tuiLabel>Links</label>
+    <input
+        tuiInputChip
+        formControlName="links"
+    />
+    <button
+        appearance="icon"
+        iconStart="@tui.x"
+        size="m"
+        tuiIconButton
+        type="button"
+        (click)="form.get('links')?.setValue(this.links)"
+    >
+        Clear
+    </button>
+    <tui-input-chip *tuiItem />
+</tui-textfield>
+  <footer>
+    <button appearance="secondary" tuiButton type="button">Cancel</button>
+    <button tuiButton type="submit" >Add Task</button>
+  </footer>
+</form>
+<pre>
+</pre>
