--- a/src/app/all/all.html
+++ b/src/app/all/all.html
@@ -2,7 +2,7 @@
 <div class="centered-row">
   <button tuiCardLarge tuiHeader tuiSurface="floating" type="button" (click)="goToTask(items.id)"
     style="height : 100px">
-    <h1 tuiTitle style="font-size: 68px; margin: 0;">
+    <h1 tuiTitle >
       {{items.title}}
     </h1>
   </button>
