--- a/src/app/task/task.html
+++ b/src/app/task/task.html
@@ -1,11 +1,15 @@
 <div class="card-container">
-  @for (x of tasks; track x) {
-  <div class="task-card">
-    <h2 class="task-title">{{ x.taskTitle }}</h2>
-    <p class="task-desc">{{ x.taskDescription }}</p>
-    <p class="task-date">{{ x.createdAtFormatted }}</p>
+    @for (x of tasks; track x) {
+      <div class="task-card">
+        <h2 class="task-title">{{ x.taskTitle }}</h2>
+        <p class="task-desc">{{ x.taskDescription }}</p>
+        @for (y of x.links;track y){
+          <a href="{{y}}">{{y}}</a>
+        }
+        <p class="task-date">{{ x.createdAtFormatted }}</p>
+      </div>
+    }
   </div>
-  }
   <!-- <div class="task-card">
     <button class="task-title" (click)="addtask()">add task</button>
   </div>
