--- a/src/app/all/all.html
+++ b/src/app/all/all.html
@@ -1,3 +1,8 @@
+@if(ans.length == 0){
+  
+<app-addsign></app-addsign>
+}@else{
+
 @for(items of ans; track items){
 <div class="centered-row">
   <button tuiCardLarge tuiHeader tuiSurface="floating" type="button" (click)="goToTask(items.id)"
@@ -8,4 +13,11 @@
   </button>
 </div>
 }
-<p>hello</p>
+
+
+
+
+      <div class="container">
+        <button (click)="goToObjective()" id="custom-btn">Add New Objective</button>
+    </div>
+}
