--- a/src/app/task/task.html
+++ b/src/app/task/task.html
@@ -7,6 +7,8 @@
           <a href="{{y}}">{{y}}</a>
         }
         <p class="task-date">{{ x.createdAtFormatted }}</p>
+        <button (click)="edittask(x._id)">Edit</button>
+        <button (click)="deletetask(x._id)">Delete</button>
       </div>
     }
   </div>
