--- a/src/app/task/task.css
+++ b/src/app/task/task.css
@@ -9,7 +9,8 @@
   overflow: auto;
 }
 .card-container::-webkit-scrollbar {
-  width: 8px;
+  width: fit-content;
+  height: 8px;
 }
 .card-container::-webkit-scrollbar-thumb {
   background-color: #888;
