--- a/src/app/task/task.css
+++ b/src/app/task/task.css
@@ -4,6 +4,7 @@
   gap: 24px; /* bigger gap */
   padding: 5px;
   justify-content: center;
+  background-color: green;
   white-space: nowrap;
   flex-direction: row;
   box-sizing: border-box;
