--- a/src/app/task/task.html
+++ b/src/app/task/task.html
@@ -10,6 +10,8 @@
         <p class="task-date">{{ x.createdAtFormatted }}</p>
         <button (click)="edittask(x._id)">Edit</button>
         <button (click)="deletetask(x._id)">Delete</button>
+        <input type="radio" value="done">
+        <label for="radio">done</label>
       </div>
     }
   </div>
