--- a/src/app/task/task.html
+++ b/src/app/task/task.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
   <div class="card-container" #cardContainer>
     @for (x of tasks; track x) {
       <div class="task-card">
