--- a/src/app/task/task.css
+++ b/src/app/task/task.css
@@ -1,10 +1,13 @@
+.container {
+  width: 100%;
+}
 .card-container {
   max-width: 100%; /* increased max width */
   display: flex;
   gap: 24px; /* bigger gap */
   padding: 5px;
   justify-content: center;
-  background-color: green;
+  background-color: grey;
   white-space: nowrap;
   flex-direction: row;
   box-sizing: border-box;
