--- a/src/app/task/task.css
+++ b/src/app/task/task.css
@@ -13,15 +13,17 @@
   overflow: auto;
 }
 .card-container::-webkit-scrollbar {
-  width: 8px;
+  width: 10px;
   height: 8px;
 }
 .card-container::-webkit-scrollbar-thumb {
-  background-color: #888;
+  background-color: black;
   border-radius: 4px;
+  width: 50px;
 }
 .card-container::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
+  background-color: black;
+  width: 50px;
 }
 .task-card {
   display: inline-block;
@@ -69,4 +71,21 @@
 #formDiv {
    display: flex;
    justify-content: center;
+}
+#submitButton {
+  background-color: black;
+  color: white;
+}
+.taskButton {
+  background-color: black;
+  color: white;
+  border: 2px solid white;
+  border-radius: 4px;
+}
+.radioContainer {
+  display: flex;
+  align-items: center;
+}
+.radioContainer > input[type="radio"] {
+  accent-color: black;
 }
