--- a/src/app/task/task.html
+++ b/src/app/task/task.html
@@ -8,12 +8,13 @@
           <a href="{{y}}">{{y}}</a>
         }
         <p class="task-date">{{ x.createdAtFormatted }}</p>
-        <button (click)="edittask(x._id)">Edit</button>
-        <button (click)="deletetask(x._id)">Delete</button>
-        <br>
-        <input type="radio" value="done">
-        <label for="radio">done</label>
-      </div>
+        <button (click)="edittask(x._id)" class="taskButton">Edit</button>
+        <button (click)="deletetask(x._id)" class="taskButton">Delete</button>
+        <div class="radioContainer">
+          <input type="radio" value="done">
+          <label for="radio">DONE</label>
+        </div>
+        </div>
     }
   </div>
 </div>
@@ -61,15 +62,7 @@
 <tui-input-chip *tuiItem />
 </tui-textfield>
 <footer>
-  <button appearance="secondary" tuiButton type="button">Cancel</button>
-  <button tuiButton type="submit" >Add Task</button>
+  <button tuiButton type="submit" id="submitButton" >Add Task</button>
 </footer>
 </form>
 </div>
-<script>
-  const cardContainer = document.querySelector('.card-container');
-  cardContainer.addEventListener('wheel', (event) => {
-    event.preventDefault();
-    cardContainer.scrollLeft += event.deltaY;
-  })
-</script>
