--- a/src/app/edit-task/edit-task.html
+++ b/src/app/edit-task/edit-task.html
@@ -1,43 +1,26 @@
 <p>edit-task works!</p>
-<form
-  tuiAppearance="floating"
-  tuiCardLarge
-  tuiForm="m"
-  [formGroup]="form"
-  [style.max-width.rem]="32"
->
-<tui-textfield>
+<form tuiAppearance="floating" tuiCardLarge tuiForm="m" [formGroup]="form" [style.max-width.rem]="32">
+  <tui-textfield>
     <label tuiLabel>task title</label>
-    <input placeholder="for e.g. java" id="taskTitle" name="taskTitle" formControlName="taskTitle" type="text" tuiTextfield />
+    <input placeholder="for e.g. java" id="taskTitle" name="taskTitle" formControlName="taskTitle" type="text"
+      tuiTextfield />
   </tui-textfield>
   <tui-textfield>
     <label tuiLabel>task Description</label>
-    <input placeholder="for e.g. java description" id="taskDescription" name="taskDescription" formControlName="taskDescription" type="text" tuiTextfield />
+    <input placeholder="for e.g. java description" id="taskDescription" name="taskDescription"
+      formControlName="taskDescription" type="text" tuiTextfield />
   </tui-textfield>
-<tui-textfield
-    multi
-    [style.width.rem]="15"
-    [tuiTextfieldCleaner]="false"
->
-  <label tuiLabel>Links</label>
-    <input
-        tuiInputChip
-        formControlName="links"
-    />
-    <button
-        appearance="icon"
-        iconStart="@tui.x"
-        size="m"
-        tuiIconButton
-        type="button"
-    >
-        Clear
+  <tui-textfield multi [style.width.rem]="15" [tuiTextfieldCleaner]="false">
+    <label tuiLabel>Links</label>
+    <input tuiInputChip formControlName="links" />
+    <button appearance="icon" iconStart="@tui.x" size="m" tuiIconButton type="button">
+      Clear
     </button>
     <tui-input-chip *tuiItem />
-</tui-textfield>
+  </tui-textfield>
   <footer>
     <button appearance="secondary" tuiButton type="button">Cancel</button>
-    <button tuiButton type="submit">Add Task</button>
+    <button tuiButton type="submit" (click)="onSubmit()">Add Task</button>
   </footer>
 </form>
 <pre>
