--- a/src/app/add-objective/add-objective.html
+++ b/src/app/add-objective/add-objective.html
@@ -1,66 +1,63 @@
-<p>add-objective works!</p>
-<form
+<div class="formDiv">
+  <form
   tuiAppearance="floating"
   tuiCardLarge
   tuiForm="m"
   [formGroup]="form"
   [style.max-width.rem]="32"
   (submit)="onSubmit()"
->
-<tui-textfield>
+  >
+  <tui-textfield>
     <label tuiLabel>title</label>
-    <input placeholder="john.wick" id="title" name="title" formControlName="title" type="text" tuiTextfield />
+    <input placeholder="john.wick" appearance="primary" class="formInput" id="title" name="title" formControlName="title" type="text" tuiTextfield />
   </tui-textfield>
-<!-- <tui-textfield
-    multi
-    [style.width.rem]="15"
-    [tuiTextfieldCleaner]="false"
->
+  <!-- <tui-textfield
+  multi
+  [style.width.rem]="15"
+  [tuiTextfieldCleaner]="false"
+  >
   <label tuiLabel>members</label>
-    <input
-        tuiInputChip
-        formControlName="members"
-    />
-    <button
-        appearance="icon"
-        iconStart="@tui.x"
-        size="m"
-        tuiIconButton
-        type="button"
-        (click)="form.get('members')?.setValue(this.members)"
-    >
-        Clear
-    </button>
-    <tui-input-chip *tuiItem />
+  <input
+  tuiInputChip
+  formControlName="members"
+  />
+  <button
+  appearance="icon"
+  iconStart="@tui.x"
+  size="m"
+  tuiIconButton
+  type="button"
+  (click)="form.get('members')?.setValue(this.members)"
+  >
+  Clear
+</button>
+<tui-input-chip *tuiItem />
 </tui-textfield>
 <tui-textfield
-    multi
-    [style.width.rem]="15"
-    [tuiTextfieldCleaner]="false"
+multi
+[style.width.rem]="15"
+[tuiTextfieldCleaner]="false"
 >
 <label tuiLabel>tasks</label>
-    <input
-        tuiInputChip
-        formControlName="tasks"
-    />
-    <button
-        appearance="icon"
-        iconStart="@tui.x"
-        size="m"
-        tuiIconButton
-        type="button"
-        (click)="form.get('tasks')?.setValue(this.tasks)"
-    >
-        Clear
-    </button>
-    <tui-input-chip *tuiItem />
+<input
+tuiInputChip
+formControlName="tasks"
+/>
+<button
+appearance="icon"
+iconStart="@tui.x"
+size="m"
+tuiIconButton
+type="button"
+(click)="form.get('tasks')?.setValue(this.tasks)"
+>
+Clear
+</button>
+<tui-input-chip *tuiItem />
 </tui-textfield> -->
 
-  <footer>
-    <button appearance="secondary" tuiButton type="button">Cancel</button>
-    <button tuiButton type="submit" >Add Objective</button>
-  </footer>
+<footer>
+  <button tuiButton class="formButton" type="submit" >Add Objective</button>
+</footer>
 </form>
-<pre>
-  {{form.value | json}}
-</pre>
+</div>
