--- a/src/app/all/all.css
+++ b/src/app/all/all.css
@@ -34,9 +34,37 @@ html,body{
   place-items: center;
   text-align: center;
 }
+.card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%; 
+  margin-top: 10px;
+}
+.card {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.divButton {
+  width: 80%;
+  background-color: black;
+  color: white;
+  border: 1.5px solid white;
+  height: fit-content;
+  border-radius: 30px;
+  padding: 25px;
+  margin-top: 10px;
+  border: 5px solid darkgrey;
+}
 .container{
   height: 100px;
-  width: 230px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
 }
 .container .wrapper{
@@ -55,16 +83,17 @@ html,body{
 .container #custom-btn{
   margin-top: 30px;
   display: block;
-  width: 100%;
+  width: 80%;
   height: 50px;
   border: none;
   outline: none;
-  border-radius: 25px;
+  border-radius: 30px;
   color: #fff;
   font-size: 18px;
   font-weight: 500;
   letter-spacing: 1px;
   text-transform: uppercase;
   cursor: pointer;
-  background: linear-gradient(135deg,#3a8ffe 0%,#9658fe 100%);
+  background-color: black;
+  border: 5px solid darkgrey;
 }
