--- a/src/app/all/all.html
+++ b/src/app/all/all.html
@@ -3,20 +3,17 @@
 <app-addsign></app-addsign>
 }@else{
 
+<div class="card-container">
 @for(items of ans; track items){
-<div class="centered-row">
-  <button tuiCardLarge tuiHeader tuiSurface="floating" type="button" (click)="goToTask(items.id)"
-    style="height : 100px">
+  <div class="card">
+    <button  type="button" class="divButton" (click)="goToTask(items.id)">
     <h1 tuiTitle >
       {{items.title}}
     </h1>
   </button>
 </div>
 }
-
-
-
-
+</div>
       <div class="container">
         <button (click)="goToObjective()" id="custom-btn">Add New Objective</button>
     </div>
