--- a/src/app/task/task.css
+++ b/src/app/task/task.css
@@ -9,6 +9,7 @@
   gap: 24px;
   /* bigger gap */
   padding: 5px;
+  padding-bottom: 10px;
   background-color: grey;
   flex-direction: row;
   overflow: auto;
@@ -33,7 +34,7 @@
 .task-card {
   display: inline-block;
   background-color: #ffffff;
-  border: 1px solid #e0e0e0;
+  border: 5px solid darkgray;
   border-radius: 14px;
   padding: 28px;
   /* more padding */
@@ -81,6 +82,8 @@
 #formDiv {
   display: flex;
   justify-content: center;
+  height: 100%;
+  background-color: black;
 }
 
 #submitButton {
@@ -92,12 +95,15 @@
   background-color: black;
   color: white;
   border: 2px solid white;
-  border-radius: 4px;
+  border-radius: 10px;
+  width: 100%;
+  margin: 3px;
 }
 
 .radioContainer {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .radioContainer>input[type="radio"] {
