--- a/src/app/add-objective/add-objective.css
+++ b/src/app/add-objective/add-objective.css
@@ -8,7 +8,6 @@
 .formButton {
     background-color: black;
     color: white;
-    border: 5px solid darkgray;
     border-radius: 10px;
     padding: 12px 16px;
     cursor: pointer;
@@ -20,10 +19,14 @@
 }
 .formDiv {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: black;
+}
+.formDiv > form {
+     border: 4px solid darkgray;
 }
 .formInput {
   border: 2px solid #ccc;
