--- a/src/app/all/all.css
+++ b/src/app/all/all.css
@@ -25,7 +25,6 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
 html,body{
@@ -40,7 +39,6 @@ html,body{
   justify-content: center;
   align-items: center;
   width: 100%; 
-  margin-top: 10px;
 }
 .card {
   width: 80%;
@@ -50,8 +48,8 @@ html,body{
 }
 .divButton {
   width: 80%;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   border: 1.5px solid white;
   height: fit-content;
   border-radius: 30px;
@@ -94,6 +92,11 @@ html,body{
   letter-spacing: 1px;
   text-transform: uppercase;
   cursor: pointer;
-  background-color: black;
+  background-color: white;
+  color: black;
   border: 5px solid darkgrey;
+}
+.allContainer {
+  background-color: black;
+  height: 100vh;
 }
