--- a/src/app/all/all.html
+++ b/src/app/all/all.html
@@ -1,20 +1,22 @@
-@if(ans.length == 0){
-  
-<app-addsign></app-addsign>
-}@else{
-
-<div class="card-container">
-@for(items of ans; track items){
-  <div class="card">
-    <button  type="button" class="divButton" (click)="goToTask(items.id)">
-    <h1 tuiTitle >
-      {{items.title}}
-    </h1>
-  </button>
-</div>
-}
-</div>
-      <div class="container">
-        <button (click)="goToObjective()" id="custom-btn">Add New Objective</button>
+<div class="allContainer">
+  @if(ans.length == 0){
+    
+    <!-- <app-addsign></app-addsign> -->
+  }@else{
+    
+    <div class="card-container">
+      @for(items of ans; track items){
+        <div class="card">
+          <button  type="button" class="divButton" (click)="goToTask(items.id)">
+            <h1 tuiTitle >
+              {{items.title}}
+            </h1>
+          </button>
+        </div>
+      }
     </div>
-}
+    <div class="container">
+      <button (click)="goToObjective()" id="custom-btn">Add New Objective</button>
+    </div>
+  }
+</div>
