--- a/src/app/task/task.html
+++ b/src/app/task/task.html
@@ -18,7 +18,8 @@
       }
     </div> 
 <div id="formDiv">
-  <form tuiAppearance="floating" tuiCardLarge  tuiForm="m" [formGroup]="form" [style.max-width.rem]="32" 
+  <form tuiAppearance="floating" tuiCardLarge  tuiForm="m" [formGroup]="form" [style.max-width.rem]="32"
+  [style.max-height.rem]="19"
     (submit)="onSubmit()">
     <tui-textfield>
       <label tuiLabel>title</label>
