--- a/src/app/task/task.css
+++ b/src/app/task/task.css
@@ -12,9 +12,8 @@
   /* increased max width */
   display: flex;
   /* bigger gap */
-  padding: 5px;
-  padding-bottom: 10px;
-  background-color: grey;
+  padding: 10px 0;
+  background-color: gray;
   flex-direction: row;
   overflow: auto;
 }
