--- a/src/app/edit-task/edit-task.html
+++ b/src/app/edit-task/edit-task.html
@@ -7,12 +7,12 @@
   </tui-textfield>
   <tui-textfield>
     <label tuiLabel>task Description</label>
-    <input placeholder]="[form.value.taskTitle]" id="taskDescription" name="taskDescription"
+    <input [placeholder]="[form.value.taskDescription]" id="taskDescription" name="taskDescription"
       formControlName="taskDescription" type="text" tuiTextfield />
   </tui-textfield>
-  <tui-textfield multi [style.width.rem]="15" [tuiTextfieldCleaner]="false">
+  <tui-textfield multi [style.width.rem]=" 15" [tuiTextfieldCleaner]="false">
     <label tuiLabel>Links</label>
-    <input tuiInputChip formControlName="links" />
+    <input [placeholder]="[form.value.links]" tuiInputChip formControlName="links" [value]="[form.value.links]" />
     <button appearance="icon" iconStart="@tui.x" size="m" tuiIconButton type="button">
       Clear
     </button>
