--- a/src/app/task/task.css
+++ b/src/app/task/task.css
@@ -1,6 +1,7 @@
-*{
+* {
   box-sizing: border-box;
 }
+
 .container {
   width: 100%;
   height: 100vh;
@@ -15,6 +16,7 @@
   background-color: gray;
   flex-direction: row;
   overflow: auto;
+  padding: 10px;
 }
 
 .card-container::-webkit-scrollbar {
@@ -86,11 +88,14 @@
   display: flex;
   justify-content: center;
   height: 100%;
-  background-color: black;;
+  background-color: black;
+  ;
 }
-#formDiv > form {
+
+#formDiv>form {
   border: 4px solid darkgray;
 }
+
 #submitButton {
   background-color: black;
   color: white;
