--- a/src/app/task/task.css
+++ b/src/app/task/task.css
@@ -16,7 +16,6 @@
   background-color: gray;
   flex-direction: row;
   overflow: auto;
-  padding: 10px;
 }
 
 .card-container::-webkit-scrollbar {
@@ -67,7 +66,7 @@
   font-size: 18px;
   /* bigger font */
   color: #555;
-  margin: 0 0 16px;
+  margin: 5px;
 }
 
 .task-date {
