addmember and notification
now we can add member to our objective and accept their respective invitations

--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -4,7 +4,10 @@
     <h1>Welcome back</h1>
     }
     @if(login){
-    <button appearance="primary" tuiButton type="button" class="navButton" routerLink="all">
+    <button (click) = "invitations()" appearance="primary" tuiButton type="button" class="navButton" routerLink="all">
+        invitations
+    </button>
+        <button appearance="primary" tuiButton type="button" class="navButton" routerLink="all">
         all
     </button>
     <button appearance="primary" tuiButton type="button" class="navButton" style="color: white;">
