--- a/src/app/task/task.html
+++ b/src/app/task/task.html
@@ -32,6 +32,10 @@
   @for(x of members; track x){
   <h1 style="color:  white">{{x}}</h1>
 }
+<input #naam placeholder="enter username" style="height: 50px;"> 
+<br/>
+<button (click)="addmember(naam.value)">ADD MEMBER</button>
+<!--  -->
   <div id="formDiv">
     <form tuiAppearance="floating" tuiCardLarge tuiForm="m" [formGroup]="form" [style.max-width.rem]="32"
       [style.max-height.rem]="19" (submit)="onSubmit()">
