invitation rejected and ui changes

--- a/src/app/navbar/navbar.css
+++ b/src/app/navbar/navbar.css
@@ -7,3 +7,8 @@
 .navButton:hover {
     background-color: darkgray;
 }
+#navbar {
+    display: flex;
+    background-color: black;
+    color: white;
+}
