--- a/src/app/members/members.html
+++ b/src/app/members/members.html
@@ -1,7 +1,18 @@
-<ul>
-    @for (x of membersArray;track x){
-    <li>
-        {{x}}
-    </li>    
-    }
-</ul>
+<div class="container">
+    <ul>
+        @for (x of membersArray;track x){
+            <li>
+                {{x}}
+            </li>    
+        }
+    </ul>
+    <div class="membersAdd">
+        <h1 style="color: white;">members</h1>
+        @for(x of members; track x){
+            <h1 style="color:  white">{{x}}</h1>
+        }
+        <input #naam placeholder="enter username" > 
+        <br/>
+        <button (click)="addmember(naam.value)">ADD MEMBER</button>
+    </div>
+</div>
