--- a/src/app/task/task.html
+++ b/src/app/task/task.html
@@ -28,39 +28,47 @@
 
 
   <!-- members -->
-   <h1 style="color: white;">members</h1>
-  @for(x of members; track x){
-  <h1 style="color:  white">{{x}}</h1>
-}
-<input #naam placeholder="enter username" style="height: 50px;"> 
-<br/>
-<button (click)="addmember(naam.value)">ADD MEMBER</button>
-<!--  -->
+  <!--  -->
   <div id="formDiv">
     <form tuiAppearance="floating" tuiCardLarge tuiForm="m" [formGroup]="form" [style.max-width.rem]="32"
-      [style.max-height.rem]="19" (submit)="onSubmit()">
-      <tui-textfield>
-        <label tuiLabel>title</label>
-        <input placeholder="task title" id="title" name="title" formControlName="title" type="text" tuiTextfield />
-      </tui-textfield>
-      <tui-textfield>
-        <label tuiLabel>description</label>
-        <input placeholder="Task description" id="description" name="description" formControlName="description"
-          type="text" tuiTextfield />
-      </tui-textfield>
-      <tui-textfield multi [style.width.rem]="15" [tuiTextfieldCleaner]="false">
-        <label tuiLabel>Links</label>
-        <input tuiInputChip formControlName="links" />
-        <button appearance="icon" iconStart="@tui.x" size="m" tuiIconButton type="button"
-          (click)="form.get('links')?.setValue(this.links)">
-          Clear
-        </button>
-        <tui-input-chip *tuiItem />
-      </tui-textfield>
-      <footer>
-        <button tuiButton type="submit" id="submitButton">Add Task</button>
-      </footer>
-    </form>
-  </div>
+    [style.max-height.rem]="19" (submit)="onSubmit()">
+    <tui-textfield>
+      <label tuiLabel>title</label>
+      <input placeholder="task title" id="title" name="title" formControlName="title" type="text" tuiTextfield />
+    </tui-textfield>
+    <tui-textfield>
+      <label tuiLabel>description</label>
+      <input placeholder="Task description" id="description" name="description" formControlName="description"
+      type="text" tuiTextfield />
+    </tui-textfield>
+    <tui-textfield multi [style.width.rem]="15" [tuiTextfieldCleaner]="false">
+      <label tuiLabel>Links</label>
+      <input tuiInputChip formControlName="links" />
+      <button appearance="icon" iconStart="@tui.x" size="m" tuiIconButton type="button"
+      (click)="form.get('links')?.setValue(this.links)">
+      Clear
+    </button>
+    <tui-input-chip *tuiItem />
+  </tui-textfield>
+  <footer>
+    <button tuiButton type="submit" id="submitButton">Add Task</button>
+  </footer>
+</form>
+<div class="membersAdd">
+  <span>
+    <h1 style="color: white;">members</h1>
+    @for(x of members; track x){
+      <li>
+        <h1 style="color:  white">{{x}}</h1>
+      </li>
+    }
+  </span>
+  <span>
+    <input #naam placeholder="enter username" > 
+    <br/>
+    <button (click)="addmember(naam.value)">ADD MEMBER</button>
+  </span>
+</div>
+</div>
 </div>
 
