--- a/src/app/task/task.css
+++ b/src/app/task/task.css
@@ -18,31 +18,46 @@
   /* increased max width */
   display: flex;
   /* bigger gap */
-  background-color: gray;
+  background-color: black;
   flex-direction: row;
   overflow: auto;
 }
-
+.card-container::-webkit-scrollbar-track{
+  color: black;
+   box-shadow: inset 0 0 5px #36454F;
+   background-color: black; 
+  }
+  .card-container::-webkit-scrollbar{
+  background-color: black;
+  color: black;
+}
 .card-container::-webkit-scrollbar {
   width: 10px;
   height: 8px;
+  color: black;
+  background-color: white;
 }
 
 .card-container::-webkit-scrollbar-thumb {
   background-color: black;
+  color: black;
+  background: #36454F;
+  accent-color: black;
   border-radius: 4px;
   width: 50px;
 }
 
 .card-container::-webkit-scrollbar-thumb:hover {
-  background-color: black;
+  background-color: red;
+  height: 50px;
+  color: black;
   width: 50px;
 }
 
 .task-card {
   display: inline-block;
   background-color: #ffffff;
-  border: 5px solid darkgray;
+  border: 2px solid #023020;
   border-radius: 14px;
   margin-left: 10px;
   padding: 28px;
@@ -53,9 +68,12 @@
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.07);
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
+  transition: border 0.2s ease;
 }
 
 .task-card:hover {
+  margin-top: 10px;
+  border: 4px solid red;
   transform: translateY(-6px);
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.12);
 }
@@ -127,6 +145,13 @@
   align-items: center;
   justify-content: center;
   flex-direction: row;
+}
+.membersAdd input{
+  transition: 10s width;
+
+}
+.membersAdd input:hover{
+  width: 140px;
 }
 .membersAdd span li{
   color: white;
